tables in annex I and propositional examples

--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -2731,7 +2731,7 @@ contains alignments\index{alignment} between a number of foundational ontologies
 entities. We select three such ontologies, containing spatial and temporal concepts: DOLCE\footnote{See \url{http://www.loa.istc.cnr.it/DOLCE.html}}, GFO\footnote{See \url{http://www.onto-med.de/ontologies/gfo/}} and BFO\footnote{See \url{http://www.ifomis.org/bfo/}}, and present alignments between them 
 using \DOL syntax:
 
-\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed,from},escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]
 %prefix(
            gfo: <http://www.onto-med.de/ontologies/>
            dolce: <http://www.loa-cnr.it/ontologies/>
@@ -2772,7 +2772,7 @@ alignment BFO2GFO :
 We can then combine the ontologies while taking into account the semantic dependencies given by the alignments using
 \DOL combinations:
 
-\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed,from},escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]
 ontology Space =
  combine BFO2GFO, DolceLite2GFO, DolceLite2BFO
 \end{lstlisting} 
@@ -2858,7 +2858,7 @@ The specification below illustrates DOL refinements by expressing that natural n
 natural numbers can be efficiently represented for implementation as lists of binary digits, together with several equivalent
 ways of composing these refinements.
 
-\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={sort, ops, refinement, free,spec type, assoc, unit,props,op,spec,refined, via,generated, then,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed,from},escapechar=@,mathescape]	
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={sort, ops, refinement, free,spec type, assoc, unit,props,op,spec,refined, via,generated, then,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]	
 
 spec Monoid =
  sort Elem
@@ -2922,7 +2922,7 @@ maintainability, and for more efficient tool support. The lack of a standard for
 and the reuse of specifications.
 DOL  provides a notion of structured modular specification that is equally applicable to all DOL-conforming logical languages.
 
-\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={spec,props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed,from},escapechar=@,mathescape]	
+\begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={spec,props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]	
 spec Monoid =
      sort Elem
      ops  e:       Elem;
@@ -3438,8 +3438,11 @@ NetworkName        ::= IRI
 Network            ::= network NetworkElements ExcludeExtensions
 NetworkElements    ::= network-elements NetworkElement*
 NetworkElement     ::= network-element [Id] OMSOrMappingorNetworkRef
-ExcludeExtensions  ::= exclude-imports OMSOrMappingorNetworkRef*
-OMSOrMappingorNetworkRef ::= IRI
+ExcludeExtensions  ::= exclude-imports OMSOrMappingorPathorNetworkRef*
+OMSOrMappingorPathorNetworkRef ::= path OMSOrMappingorNetworkRef
+                                        OMSOrMappingorNetworkRef
+                     | OMSOrMappingorNetworkRef
+Omsormappingornetworkref ::= IRI
 \end{lstlisting}
 
 
@@ -3473,7 +3476,7 @@ some non-logical symbols are hidden, but the semantic effect of sentences involv
 maximization, freeness (minimizing also data sets and equalities on these), and cofreeness
 (maximizing also data sets and equalities on these),}
 \item \red{the application of a substitution to a sentence.}
-\todonote{@Till: why are the bridges not in this list?}
+
 
 \end{itemize}
 % derived from CASL (see CASL reference manual)
@@ -3494,7 +3497,6 @@ OMS                ::= ExtendingOMS
                      | union OMS [ConsStrength] OMS
                      | extension OMS ExtensionOMS
                      | qual-oms Qualification* OMS
-                     | bridge OMS Translation* ExtendingOMS
                      | combination Network
                      | application OMS SubstName
 Minimization       ::= MinType CircMin CircVars
@@ -3998,6 +4000,7 @@ Network            ::= NetworkElements [ExcludeExtensions]
 NetworkElements    ::= NetworkElement ( ',' NetworkElement )*
 NetworkElement     ::= [Id ':'] OMSOrMappingorNetworkRef
 ExcludeExtensions  ::= 'excluding' ExtensionRef ( ',' ExtensionRef )*
+OMSOrMappingorPathorNetworkRef ::= IRI '->' IRI
 OMSOrMappingorNetworkRef ::= IRI
 Id                 ::= Letter LetterOrDigit*
 \end{lstlisting}
@@ -4032,7 +4035,6 @@ OMS              ::= ExtendingOMS
                    | OMS 'and' [ConsStrength] OMS
                    | OMS 'then' ExtensionOMS
                    | Qualification* ':' GroupOMS
-                   | OMS 'bridge' Translation* ExtendingOMS
                    | 'combine' NetworkElements [ExcludeExtensions]
                    | OMS 'with' SubstName
                    | GroupOMS
@@ -4077,14 +4079,14 @@ OMSkeyword       ::= 'ontology'
                    | 'specification'
                    | 'spec'
                    | 'model'
-                   | 'OMS'
+                   | 'oms'
 OMSDefn          ::= OMSkeyword OMSName '=' [ConsStrength] OMS 'end'
 Symbol           ::= IRI
 SymbolMap        ::= Symbol '|->' Symbol
 SymbolOrMap      ::= Symbol | SymbolMap
 OMSName          ::= IRI
 OMSRef           ::= IRI
-ExtensionRef     ::= IRI
+ExtensionRef     ::= IRI | IRI '->' IRI
 LanguageRef      ::= IRI
 LogicRef         ::= IRI
 SyntaxRef        ::= IRI
@@ -4474,8 +4476,7 @@ A $\Sigma$-model consists of a set $\UR$,
 the universe of reference, with a non-empty subset $\UD\subseteq \UR$,
 the universe of discourse, and four mappings:
   \begin{itemize}
-   \item $\rel$ from $\UR$ to subsets of $\UD^* = \{<x_1,\ldots,x_n> |
-x_1,\ldots,x_n \in \UD\}$ (i.e., the set of finite sequences of
+   \item $\rel$ from $\UR$ to subsets of $\UD^* = \{\langle x_1,\ldots,x_n \rangle \mid x_1,\ldots,x_n \in \UD\}$ (i.e., the set of finite sequences of
 elements of $\UD$);
    \item $\fun$ from $\UR$ to total functions from $\UD^*$ into $\UD$;
    \item $\intCL$ from names in $\Sigma$ to $\UR$, such that
@@ -4737,31 +4738,6 @@ This concludes the definition of heterogeneous logical environment and the assum
 
 \medskip
 
-The semantics of OMS generally depends on a global environment
-$\Gamma$ containing:
- \begin{itemize}
-    \item a mapping from \syntax{IRI}s to semantics of OMS, OMS mappings, OMS networks and OMS queries, that 
-               we also denote by $\Gamma$, providing access to previous definitions,
-    \item a prefix map, denoted $\Gamma.\prefix$, that stores the declared prefixes,
-    \item a triple $\Gamma.\current$ that stores the current language, logic and serialization. 
- \end{itemize}
-
-If $\Gamma$ is such a global environment, $\Gamma[\syntax{IRI} \mapsto \cS]$
-extends the domain of $\Gamma$ with \syntax{IRI} and
-the newly added value of $\Gamma$ in \syntax{IRI} is the semantic entity $\cS$.
- $\Gamma_\emptyset$ is the empty global environment, i.e.~the domain of $\Gamma_\emptyset$ is the empty set,
-the prefix map is empty and the current triple contains the error logic together with its language and serialization.
-The union of two global environments $\Gamma_1$ and $\Gamma_2$, 
-denoted $\Gamma_1\cup\Gamma_2$, is defined only if the domains of $\Gamma_1$ and $\Gamma_2$,
-and of $\Gamma_1.\prefix$ and $\Gamma_2.\prefix$ are disjoint, and then
-$\Gamma_1\cup\Gamma_2(\syntax{IRI}) = \begin{cases}
-\Gamma_1(\syntax{IRI})& \mbox{if } \syntax{IRI} \in dom(\Gamma_1) \\
-\Gamma_2(\syntax{IRI})& \mbox{if } \syntax{IRI} \in dom(\Gamma_2)
-\end{cases}$, $\Gamma_1\cup\Gamma_2.\current = \Gamma_1.\current$
-and $\Gamma_1\cup\Gamma_2.\prefix = \Gamma_1.\prefix \cup \Gamma_2.\prefix$.
-We will write $\Gamma.\{\prefix = \PMap\}$ for the global environment that set the prefix map of 
-$\Gamma$ to $\PMap$ and $\Gamma.\{\current  = (lang, logic, ser)\}$ for updating the current triple of $\Gamma$ to
-$(lang, logic, ser)$.
 
 
 DOL follows a model-theoretic approach on semantics: the semantics of OMS will be defined as a class of models 
@@ -4832,6 +4808,37 @@ node of it. Also, creating a combination of the
 network requires that the graphs of the mappings 
 should be unfolded.
 
+The semantics of OMS generally depends on a global environment
+$\Gamma$ containing:
+ \begin{itemize}
+    \item a graph of imports between OMS, as in the semantics of OMS mappings but
+          only with import links between nodes, denoted $\Gamma.imports$
+    \item a mapping from \syntax{IRI}s to semantics of OMS, OMS mappings, OMS networks and OMS queries, that 
+               we also denote by $\Gamma$, providing access to previous definitions,
+    \item a prefix map, denoted $\Gamma.\prefix$, that stores the declared prefixes,
+    \item a triple $\Gamma.\current$ that stores the current language, logic and serialization. 
+ \end{itemize}
+
+If $\Gamma$ is such a global environment, $\Gamma[\syntax{IRI} \mapsto \cS]$
+extends the domain of $\Gamma$ with \syntax{IRI} and
+the newly added value of $\Gamma$ in \syntax{IRI} is the semantic entity $\cS$.
+ $\Gamma_\emptyset$ is the empty global environment, i.e.~the domain of $\Gamma_\emptyset$ is the empty set, its import graph $\Gamma.imports$ is empty,
+the prefix map is empty and the current triple contains the error logic together with its language and serialization.
+The union of two global environments $\Gamma_1$ and $\Gamma_2$, 
+denoted $\Gamma_1\cup\Gamma_2$, is defined only if the domains of $\Gamma_1$ and $\Gamma_2$,
+and of $\Gamma_1.\prefix$ and $\Gamma_2.\prefix$ are disjoint, and then
+$\Gamma_1\cup\Gamma_2(\syntax{IRI}) = \begin{cases}
+\Gamma_1(\syntax{IRI})& \mbox{if } \syntax{IRI} \in dom(\Gamma_1) \\
+\Gamma_2(\syntax{IRI})& \mbox{if } \syntax{IRI} \in dom(\Gamma_2)
+\end{cases}$, 
+$\Gamma_1\cup\Gamma_2.imports = \Gamma_1.imports \cup \Gamma_2.imports$,
+$\Gamma_1\cup\Gamma_2.\current = \Gamma_1.\current$
+and $\Gamma_1\cup\Gamma_2.\prefix = \Gamma_1.\prefix \cup \Gamma_2.\prefix$.
+We will write $\Gamma.\{\prefix = \PMap\}$ for the global environment that set the prefix map of 
+$\Gamma$ to $\PMap$ and $\Gamma.\{\current  = (lang, logic, ser)\}$ for updating the current triple of $\Gamma$ to
+$(lang, logic, ser)$.
+
+
 %We  assume a \emph{language-specific semantics} of basic
 %OMS, inherited from the OMS language.  
 %%For a basic OMS in 
@@ -4876,21 +4883,13 @@ $$sem(\syntax{PrefixMap, LibraryDefn}) = \Gamma''$$
  $sem(\syntax{PrefixMap}) = \PMap$, $\Gamma'' = \Gamma_\emptyset.\{\prefix = \PMap\}$ and 
 $sem(\Gamma'', \syntax{LibraryDefn}) = \Gamma'$. 
 
-$$sem^T(\syntax{OMSInConformingLanguage}) = \Gamma''$$
+$$sem(\syntax{OMSInConformingLanguage}) = \Gamma''$$
 
 \noindent where 
 $\Gamma' =\Gamma_\emptyset.\{\current = L\} $, with $L$ determined from the extension of the file containing the library,
-$sem^T(\Gamma', \syntax{OMSInConformingLanguage}) = (I,  \Sigma, \Delta)$,
+$sem(\Gamma', \syntax{OMSInConformingLanguage}) = (I,  \Sigma, \cM, \Delta)$,
 \syntax{IRI} is the IRI of the library and 
-$\Gamma'' = \Gamma'[\syntax{IRI} \mapsto (I, \Sigma, \Delta)]$.
-
-$$sem^M(\syntax{OMSInConformingLanguage}) = \Gamma''$$
-
-\noindent where 
-$\Gamma' =\Gamma_\emptyset.\{\current = L\} $, with $L$ determined from the extension of the file containing the library,
-$sem^M(\Gamma', \syntax{OMSInConformingLanguage}) = (I,  \Sigma, \cM)$,
-\syntax{IRI} is the IRI of the library and 
-$\Gamma'' = \Gamma'[\syntax{IRI} \mapsto (I, \Sigma, \cM)]$.
+$\Gamma'' = \Gamma'[\syntax{IRI} \mapsto (I, \Sigma, \cM,\Delta)]$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
@@ -4977,8 +4976,12 @@ The semantics is defined only if $\mathit{lang}$ supports \syntax{SyntaxRef}.
 The semantics of networks of OMS is given with the help of a directed graph. Its nodes
 and edges are specified by the \syntax{NetworkElement}s, which can be OMS, OMS mappings, or OMS networks. Intuitively, the graph of a
 network consists of the union of all graphs of the network elements it
-contains, where an OMS yields a graph with one isolated node.
+contains, where an OMS yields a graph with one isolated node. We make the convention that
+all imports in the graph $\Gamma.imports$ of the current context between nodes that are
+specified in the list of \syntax{NetworkElements} are also included in the graph of 
+the network. 
 The nodes and edges given in the \syntax{ExcludeExtensions} list are then removed from the graph of the network. 
+
 An additional \syntax{Id} can be specified for each node, with the purpose of letting the user specify a 
 prefix in the colimit of a network for the symbols with the origin in that node that must be disambiguated.
 
@@ -4988,24 +4991,37 @@ We are going to make use of the following notations. If $G$ is a graph, let $ins
                  a new node named \syntax{IRI} and labeled with $\Gamma(\syntax{IRI})$ and with \syntax{Id} is added to $G$,
                  unless a node named \syntax{IRI} already exists in $G$, and in this case $G$ is left unchanged,
    \item if \syntax{IRI} is an OMS mapping 
-      or a netof work in $\Gamma$, it denotes a graph $G'$. Then
+      or a network in $\Gamma$, it denotes a graph $G'$. Then
       the result is the union of $G$ with $G'$.
  \end{itemize}
-Similarly, the operation $remove(\Gamma, G, \syntax{Id})$ is defined as follows:
+ 
+ 
+Similarly, the operation $remove(\Gamma, G, \syntax{OMSOrMappingorPathorNetworkRef})$ is defined as follows:
+
+\begin{itemize}
+
+\item if \syntax{OMSOrMappingorPathorNetworkRef} is an \syntax{IRI}, then
+
  \begin{itemize}
     \item if \syntax{IRI} is an OMS in $\Gamma$, then the node labeled with \syntax{IRI} and all its incoming and outgoing
                 edges are removed from $G$,
-   \item  if \syntax{IRI} is an OMS mapping in $\Gamma$, then  $\Gamma(\syntax{IRI})$ is a graph $G'$. \ednote{Important: by writing
-   excluding V or excluding A, I would want to remove just the mapping
-   from the network, but NOT the nodes it relates. The nodes should
-   be removed explicitly. Example: we may want to remove an import
-   between two nodes. This is different now: with a mapping,
-   all nodes get removed.}
-                Then all nodes of $G'$ and all their incoming and outgoing edges in $G$ (which include those in $G'$) are removed
-                 from $G$.
+   \item  if \syntax{IRI} is an OMS mapping in $\Gamma$, then  
+   $\Gamma(\syntax{IRI})$ gives a graph $G'$ and two nodes 
+   $N_1$ and $N_2$. Then all nodes of $G'$ other than $N_1$ and
+   $N_2$ and all the edges of $G'$ are removed from $G$.
    \item if \syntax{IRI} is a network in $\Gamma$, then all the nodes of its graph and all their incoming and outgoing edges are removed 
                from $G$.
  \end{itemize}
+ 
+ \item if \syntax{OMSOrMappingorPathorNetworkRef} is an \syntax{'path',IRI$_1$, IRI$_2$},
+ then all paths of imports in $G$ between the nodes labeled with 
+ \syntax{IRI}$_1$ and \syntax{IRI}$_2$ are removed from $G$.
+
+\end{itemize}
+
+Finally, the operation $addImports(\Gamma, G, \syntax{NetworkElements})$ adds to G
+all import edges in $\Gamma.imports$ between nodes which appear 
+in the list \syntax{NetworkElements}. 
 
 
 \semdom{sem(\Gamma, \syntax{NetworkDefn}) = \Gamma'}
@@ -5024,12 +5040,13 @@ defined if $sem(\Gamma,\syntax{OMS})$ consist of exactly one isomorphism
 class of families of models.
 
 If \syntax{ConsStrength} is \syntax{weak-definitional}, the semantics is only
-defined if $sem(\Gamma,\syntax{OMS})$ is a singleton.
+defined if $sem(\Gamma,\syntax{OMS})$ is at most a singleton.
+\ednote{@Till: is this right? When is this needed?}
 
 If \syntax{ConsStrength} is \syntax{definitional}, the semantics is only
 defined if $sem(\Gamma,\syntax{OMS})$ is a singleton.
 
-\ednote{Please also cover the new case of \syntax{ConsStrength} being \syntax{not-conservative}.}
+\ednote{Please also cover the new case of \syntax{ConsStrength} being \syntax{not-model-conservative} resp.\ \syntax{not-consequence-conservative}.}
 
 \semdom{sem(\Gamma, \syntax{Network}) = G}
 
@@ -5045,7 +5062,8 @@ $$sem(\Gamma, \syntax{NetworkElement}_1,\ldots,\syntax{NetworkElement}_n) = G'$$
  $G_1 = sem(\Gamma, G_\emptyset, \syntax{NetworkElement}_1)$\\
  $G_2 = sem(\Gamma, G_1, \syntax{NetworkElement}_2)$\\
  $\ldots$\\
- $G' = sem(\Gamma, G_{n-1}, \syntax{NetworkElement}_n)$
+ $G_n = sem(\Gamma, G_{n-1}, \syntax{NetworkElement}_n)$,
+ $G' = addImports(\Gamma, G_n, \syntax{NetworkElements})$.
 
 \semdom{sem(\Gamma, G, \syntax{NetworkElement}) = G'}
 
@@ -5053,13 +5071,14 @@ $$sem(\Gamma, G, \syntax{network-element, Id, IRI}) = insert(G, \Gamma, \syntax{
 
 \semdom{sem(\Gamma, G, \syntax{ExcludeExtensions})= G'}
 
-$$sem(\Gamma, G, \syntax{exclude-imports, IRI$_1, \ldots,$ IRI$_n$}) = G'$$
+$$sem(\Gamma, G, \syntax{exclude-imports, R$_1, \ldots,$ R$_n$}) = G'$$
 
 \noindent where\\
- $G_1 = remove(\Gamma, G, \syntax{IRI}_1)$\\
- $G_2 = remove(\Gamma, G_1, \syntax{IRI}_2)$\\
+ $R_i = \syntax{OMSOrMappingorPathorNetworkRef}_i$ for each $i=1,\ldots,n$
+ $G_1 = remove(\Gamma, G, \syntax{R}_1)$\\
+ $G_2 = remove(\Gamma, G_1, \syntax{R}_2)$\\
   $\ldots$ \\
- $G' = remove(\Gamma, G_{n-1}, \syntax{IRI}_n)$
+ $G' = remove(\Gamma, G_{n-1}, \syntax{R}_n)$
 
 \ssclause{Semantics of OMS}
 
@@ -5088,13 +5107,14 @@ The semantics of an OMS reference $O$ in the local environment of
 previous declarations $(\Sigma, \cM, \Delta)$ and global environment
 $\Gamma$, is given by
  \begin{itemize}
-   \item $\Inst(\syntax{'oms-ref', O}) = \Inst(O)$ which must be the same
+   \item $\Inst(\syntax{'oms-ref', O, ImportName}) = \Inst(O)$ which must be the same
    with the current logic of $\Gamma$
-   \item $\Sign(\syntax{'oms-ref', O}) = \Sigma \cup \Sign(O)$
-   \item $\Mod(\syntax{'oms-ref', O}) = \{ M \in Mod(\Sign(\syntax{'oms-ref', O})) \mid M\forget\Sigma \in \cM \text{ and } M \forget{\Sign(O)} \in \Mod(O) \}$
-   \item $\Th(\syntax{'oms-ref' O}) = \Delta \cup \Th(O)$
+   \item $\Sign(\syntax{'oms-ref', O, ImportName}) = \Sigma \cup \Sign(O)$
+   \item $\Mod(\syntax{'oms-ref', O, ImportName}) = \{ M \in Mod(\Sign(\syntax{'oms-ref', O, ImportName})) \mid M\forget\Sigma \in \cM \text{ and } M \forget{\Sign(O)} \in \Mod(O) \}$
+   \item $\Th(\syntax{'oms-ref', O, ImportName}) = \Delta \cup \Th(O)$
  \end{itemize}
-\todonote{why allow to change the name of an OMS here?}
+
+\ednote{remove importname?}
 
 %\semdom{sem(\Gamma,L,(\Sigma,\cM),\syntax{MinimizableOMS})=(I,\Sigma',\cM')}
 % 
@@ -5313,21 +5333,15 @@ be $\Gamma$ and not $\Gamma'$.
 
 %Bridge
 
-$$sem^T(\Gamma, \syntax{'bridge', OMS$_1$, \{ Translation\}, OMS$_2$ })= (\cI, \Sigma,\Delta)$$
+\ednote{@Till: check. @Mihai: I have removed bridges}
 
+The semantics of \syntax{bridge, OMS$_1$, \{ Translation\}, OMS$_2$} is 
+$(\cI, \Sigma,\cM, \Delta)$
 where \\
-$sem^T(\Gamma,  \syntax{'bridge', OMS$_1$})= (\cI_1, \Sigma_1,\Delta_1)$,\\
-$sem^T(\Gamma,  \syntax{LogicTranslation}) = (\Phi, \alpha,\beta) : \cI_1 \to \cI_2$,\\
-$sem^T(\Gamma,  (\cI_2, \Phi(\Sigma_1), \alpha_{\Sigma_1}(\Delta_1)), \syntax{OMS}_2) = (\cI, \Sigma,\Delta)$. 
-
-
-$$sem^M(\Gamma, \syntax{'bridge', OMS$_1$, \{ Translation\}, OMS$_2$ })= (\cI, \Sigma,\cM)$$
-
-where \\
-$sem^M(\Gamma,  \syntax{'bridge', OMS$_1$})= (\cI_1, \Sigma_1,\cM_1)$,\\
-$sem^M(\Gamma, \syntax{LogicTranslation}) = (\Phi, \alpha,\beta) : \cI_1 \to \cI_2$,\\
+$sem(\Gamma,  \syntax{'bridge', OMS$_1$})= (\cI_1, \Sigma_1,\cM_1,\Delta_1)$,\\
+$sem(\Gamma, \syntax{LogicTranslation}) = (\Phi, \alpha,\beta) : \cI_1 \to \cI_2$,\\
 $\cM'_1 = \{ M \in \Mod^{I_2}(\Phi(\Sigma_1)) \mid \beta_{\Sigma_1}(M) \in \cM_1 \}$ and \\
-$sem^M(\Gamma, (\cI_2, \Phi(\Sigma_1), \cM'_1), \syntax{OMS}_2) = (\cI,\Sigma,\cM)$.
+$sem(\Gamma, (\cI_2, \Phi(\Sigma_1), \cM'_1, \alpha_{\Sigma_1}(\Delta_1)), \syntax{OMS}_2) = (\cI,\Sigma,\cM,\Delta)$.
 
 
 %Combination
@@ -5739,7 +5753,7 @@ See equations for \syntax{IntprDefn},  \syntax{Entailment}, \syntax{EquivDefn}, 
 
 $$sem(\Gamma, \syntax{intrp-defn, IntprName, IntrpType,LogicTranslation, SymbolMapItems}) = \Gamma'$$
 where
- $\Gamma' = \Gamma[\syntax{IntprName} \to G]$\\
+ $\Gamma' = \Gamma[\syntax{IntprName} \to (G, (\rho,\sigma), L_1, L_2)]$\\
  and $G$ is the graph $L_1\stackrel{(\rho,\sigma)}{\longrightarrow} L_2$
  where 
   \begin{itemize}
@@ -5783,17 +5797,10 @@ $$sem(\Gamma,  \syntax{intpr-type, OMS$_1$, OMS$_2$}) = (L_1, L_2)$$
 
 \semdom{sem(\Gamma, \syntax{Refinement}) = ((G_1, G_2), \sigma, \cM)}
 
-\ednote{TODO: update intuition}
-
-The signature of a refinement between OMS stores the signature of the OMS being refined and the signature of the 
-OMS after refinement. Since the logic might change along a refinement step, we also store the logics. 
-Given a refinement signature $((\cI_1,\Sigma_1),(\cI_2,\Sigma_2))$, a refinement model is 
-a class $\cR = \{ (M_1, M_2) \mid M_1 \in \Mod^{\cI_1}(\Sigma_1), M_2\in \Mod^{\cI_2}(\Sigma_2)  \}$ such that
-$\cR^{-1}$ is a partial function mapping $\Mod^{\cI_2}(\Sigma_2)$-models to $\Mod^{\cI_1}(\Sigma_1)$-models.
-
-Similarly, for a refinement between networks we store the graph of the network before and after refinement.
-A refinement model in such case is a class of pairs of families of models compatible with the two networks. By
-a slight abuse of notation, we will denote such models also by $\cR$. 
+The signature of a refinement is a pair consisting of the graph of the
+OMS or network of OMS being refined and the 
+graph of the OMS or network of OMS after refinement. Together with this pair
+we store the mapping along which the refinement is done. 
 Given two networks $G_1$ and $G_2$, a \emph{network morphisms} 
 $\sigma : G_1\to G_2$ is a 
 functor $\sigma^G: Shape(G_1)\to Shape(G_2)$ 
@@ -5805,8 +5812,11 @@ where $\rho = (\Phi, \alpha, \beta) : \cI_1 \to \cI_2$ is an institution comorph
 $\sigma^M_{N_1} : \Phi(\Sigma_1) \to \Sigma_2$ is a signature morphism,
 such that $\beta_{\Sigma_1}(M_2\forget{\sigma^M_{N_1}}) \in \cM_1$ for each $M_2 \in  \cM_2$.
 
+A refinement model is a class $\cM$ 
+of pairs of families of models compatible with the two networks. 
 Given a network morphism $\sigma:G_1\to G_2$ and a $G_2$ model $F$, 
-we define $F\forget\sigma$ as the family of models $\{M_i\}_{i\in Nodes(G_1)}$ such that
+we define $F\forget\sigma$ as the family of models 
+$\{M_i\}_{i\in Nodes(G_1)}$ such that
 $M_i = F_{G(i)}\forget{\sigma^M_{N_i}}$, for each $i\in Nodes(G_1)$.
 
 $$sem(\Gamma, \syntax{ref-oms, OMS}) = 
@@ -5926,7 +5936,7 @@ where $\Gamma' = \Gamma[EntailmentName \mapsto sem(\Gamma, \syntax{EntailmentTyp
 
 %%%%%%%%%%%%%%%%%%%%
 
-\semdom{sem(\Gamma, \syntax{EntailmentType}) = G}
+\semdom{sem(\Gamma, \syntax{EntailmentType}) = (G, id, L_2,L_1)}
 
 $$sem(\Gamma, \syntax{oms-oms-entailment, OMS$_1$, OMS$_2$}) = L_2 \stackrel{\id}{\to} L_1$$
 
@@ -5974,14 +5984,16 @@ on $\Sig(N_1)$.
 $$sem(\Gamma,\syntax{'equiv-defn' , EquivName , ( 'equiv-type' }O_1\ O_2\syntax{ )}\ O_3)=\Gamma'$$
 
 \noindent where 
-$\Gamma' = \Gamma[\syntax{EquivName} \mapsto G]$
+$\Gamma' = \Gamma[\syntax{EquivName} \mapsto (G, id, N_1, N_2)]$
 where 
-$G$ is the graph\\
-$(\Name(O_1), \Inst(O_1), \Sig(O_1),\Mod(O_1), \Th(O_1)) \stackrel{\iota_1}{\rightarrow} \\
-      (\Name(O_3), \Inst(O_3), \Sig_{(\Sig(O_1)\cup\Sig(O_2),\emptyset)}(O_3), \Mod_{(\Sig(O_1)\cup\Sig(O_2),\emptyset)}(O_3), \Th_{(\Sig(O_1)\cup\Sig(O_2),\emptyset)}(O_3))
-     \\  \stackrel{\iota_2}{\leftarrow} 
-     (\Name(O_2), \Inst(O_2),\Sign(O_2), \Mod(O_2), \Th(O_2))
-      $ where
+$G$ is the graph
+$N_1 \stackrel{\iota_1}{\rightarrow} N_3 \stackrel{\iota_2}{\leftarrow} 
+N_3$ where
+$N_1$ is labelled with $(\Name(O_1), \Inst(O_1), \Sig(O_1),\Mod(O_1), \Th(O_1))$,\\
+$N_2$ with $(\Name(O_2), \Inst(O_2),\Sign(O_2), \Mod(O_2), \Th(O_2))$
+and \\
+$N_3$ with $(\Name(O_3), \Inst(O_3), \Sig_{(\Sig(O_1)\cup\Sig(O_2),\emptyset)}(O_3), \Mod_{(\Sig(O_1)\cup\Sig(O_2),\emptyset)}(O_3),\allowbreak  \Th_{(\Sig(O_1)\cup\Sig(O_2),\emptyset)}(O_3))$\\
+such that
 $\iota_i$ are inclusions and we have that 
 $\Inst(O_1) = \Inst(O_2) = \Inst(O_3)$ and 
 for each $i = 1,2$ and each model $M_i \in \Mod(O_i)$ there exists a unique model $M\in \Mod_{(\Sign(O_1)\cup\Sign(O_2),\emptyset)}(O_3)$
@@ -5995,17 +6007,19 @@ such that $M\forget{\Sign(O_i)} = M_i$.
 $$sem(\Gamma, \syntax{module-defn, ModuleName, Conservative, ModuleType, InterfaceSignature}) = \Gamma'$$
 
 \noindent where 
-$\Gamma' = \Gamma[\syntax{ModuleName}\mapsto G]$
+$\Gamma' = \Gamma[\syntax{ModuleName}\mapsto (G,\iota, N_2,N_1)]$
 and $G$ is the graph 
- $(O_2, \Inst(O_2),\Sign(O_2),  \Mod(O_2), \Th(O_2))\allowbreak 
- \stackrel{\iota}{\rightarrow} 
-(O_1, \Inst(O_1),\Sign(O_1), \Mod(O_1), \Th(O_1))$, with $\iota$ being the inclusion, 
+$N_1 \stackrel{\iota}{\rightarrow} N_2$
+where $N_1$ is labeled with $(O_1, \Inst(O_1),\Sign(O_1), \Mod(O_1), \Th(O_1)$
+$N_2$ with 
+ $(O_2, \Inst(O_2),\Sign(O_2),  \Mod(O_2), \Th(O_2))$, 
+and $\iota$ is an inclusion, 
 when $\Sigma \subseteq \Sign(O_2) \subseteq \Sign(O_1)$
 and if $c=$\%mcons and for each $M\in\Mod(O_2)$ there is a model $M'\in \Mod(O_1)$ such that
 $M'\forget{\Sigma} = M\forget{\Sigma}$,
 or if $c=$\%ccons and for each $\varphi\in\Sen(\Sigma)$, $O_1\models\varphi$
 implies $O_2\models\varphi$.
-\ednote{TODO: finish this}
+\ednote{This should be checked.}
 
 
 %%%%%%%%%%%%%%%%%%%%
@@ -6018,7 +6032,9 @@ where
 $sem(\Gamma,\syntax{AlignType}) = (L_1, L_2)$
 and\\
 $\Gamma'=\Gamma[\syntax{AlignType} \mapsto 
-sem(\Gamma, (L_1, L_2), \syntax{AlignCard, AlignSem, Corresps})]$
+(sem(\Gamma, (L_1, L_2), \syntax{AlignCard, AlignSem, Corresps})
+id,L_1,L_2)
+]$
 
 \semdom{sem(\Gamma, \syntax{AlignType}) = (L_1, L_2)}
 
@@ -6056,7 +6072,7 @@ $$sem(\Gamma, L_1,\syntax{AlignSem})=\begin{cases}
                                                                                                   
                                                                                                                   
 
-\semdom{sem(\Gamma, L_1, L_2 \syntax{AlignCard, AlignSem},C_1,\ldots,C_n)=G}
+\semdom{sem(\Gamma, L_1, L_2, \syntax{AlignCard, AlignSem},C_1,\ldots,C_n)=G}
 
 $sem(\Gamma, L_1, L_2, \syntax{AlignCard, AlignSem},C_1,\ldots,C_n)=G$
 
@@ -7628,16 +7644,32 @@ The actual translations are specified in \cite{OntoGraph}.
 \begin{tabular}{|l|l|}\hline
 \multicolumn{2}{|c|}{\textbf{Top-level declarations in libraries}}\\\hline
 \textbf{Top-level declaration} & \textbf{Examples} \\\hline
+library \ldots & all examples\\\hline
+import IRI & \\\hline
 language IRI  & Alignments, Publications \\\hline
 logic IRI  & Alignments, Mereology \\\hline
 serialization IRI  & Alignments, Mereology \\\hline
 PrefixMap  & Mereology \\\hline
-ontology IRI = OMS end  &  Alignments, Mereology \\\hline
-ontology IRI = \%mcons OMS end  & Mereology \\\hline
-interpretation IRI : OMS to OMS = Symbol |-> Symbol ...  & Mereology \\\hline
-interpretation IRI : OMS to OMS = \%cons Symbol |-> Symbol ...  &  \\\hline
+oms IRI = OMS end  &  Alignments, Mereology \\\hline
+oms IRI = \%consistent OMS end  & PropositionalExamples, Mereology \\\hline
+oms IRI = \%inconsistent OMS end  & PropositionalExamples \\\hline
+oms IRI = \%mono OMS end  &  \\\hline
+oms IRI = \%def OMS end  & PropositionalExamples \\\hline
+network IRI = IRI, \ldots, IRI & \\\hline
+network IRI = IRI, \ldots, IRI & \\
+\qquad excluding IRI, \ldots, IRI -> IRI & \\\hline
+interpretation IRI : OMS to OMS = SymbolMap  & Mereology \\\hline
+interpretation IRI : OMS to OMS = \%cons SymbolMap  &  \\\hline
 interpretation IRI : OMS to OMS = translation IRI  & Mereology \\\hline
+refinement IRI = OMS refined via SymbolMap to OMS & \\\hline
+refinement IRI = OMS refined via translation IRI to OMS & \\\hline
+refinement IRI = Network refined via IRI |-> IRI & \\
+\qquad using translation to Network & \\\hline
+entailment IRI = OMS entails OMS & PropositionalExamples \\\hline
+entailment IRI = OMSName in Network entails OMS & \\\hline
+entailment IRI = Network entails Network & \\\hline
 equivalence IRI : OMS \lessthan-\greaterthan\ OMS = OMS end  &  Algebra \\\hline
+equivalence IRI : Network \lessthan-\greaterthan\ Network = Network end  &  \\\hline
 module IRI : OMS of OMS for Symbols  &  \\\hline
 module IRI \%ccons : OMS of OMS for Symbols  &  \\\hline
 alignment IRI : OMS to OMS end  &  \\\hline
@@ -7646,6 +7678,15 @@ alignment IRI ? : OMS to OMS end  &  \\\hline
 alignment IRI + : OMS to OMS end  &  \\\hline
 alignment IRI * : OMS to OMS end  &  \\\hline
 alignment IRI : OMS to OMS = Correspondences  & Alignments \\\hline
+alignment IRI : OMS to OMS = Correspondences & \\
+\qquad assuming SingleDomain &  \\\hline
+alignment IRI : OMS to OMS = Correspondences & \\
+\qquad assuming GlobalDomain &  \\\hline
+alignment IRI : OMS to OMS = Correspondences & \\
+\qquad assuming ContextualizedDomain &  \\\hline
+query IRI = select ars where Sen in OMS & \\\hline
+substitution IRI : OMS to OMS = SymbolMap & \\\hline
+result IRI = IRIs for IRI & \\\hline
 \end{tabular}
 
 \begin{tabular}{|l|l|}\hline
@@ -7656,7 +7697,12 @@ IRI  & Alignments, Mereology \\\hline
 IRI \%( IRI )\%  &  \\\hline
 minimize \{ OMS \}  & BlocksWithCircumscription \\\hline
 OMS minimize Symbols var Symbols  & BlocksWithCircumscription \\\hline
-OMS with Symbol |-> Symbol ...  & Alignments \\\hline
+OMS maximize Symbols var Symbols  &  \\\hline
+OMS then minimize { OMS } &  \\\hline
+OMS then maximize { OMS } &  \\\hline
+OMS then free { OMS } &  \\\hline
+OMS then cofree { OMS } &  \\\hline
+OMS with SymbolMap  & Alignments \\\hline
 OMS with translation IRI  & Mereology \\\hline
 OMS with translation IRI : IRI $\to$ IRI  &  \\\hline
 OMS with translation IRI $\to$ IRI  &  \\\hline
@@ -7668,14 +7714,21 @@ OMS hide along IRI  &  \\\hline
 OMS hide along IRI : IRI $\to$ IRI  &  \\\hline
 OMS hide along IRI $\to$ IRI  &  \\\hline
 OMS hide along $\to$ IRI  &  \\\hline
-OMS approximate with IRI   &  \\\hline
-OMS approximate in IRI with IRI   &  \\\hline
-OMS approximate in IRI  &  \\\hline
+OMS extract Symbols  &  \\\hline
+OMS remove Symbols  &  \\\hline
+OMS forget Symbols  &  \\\hline
+OMS forget Symbols keep Logic  &  \\\hline
+OMS keep Symbols  &  \\\hline
+OMS keep Symbols keep Logic &  \\\hline
+OMS select BasicOMS  &  \\\hline
+OMS reject BasicOMS  &  \\\hline
 OMS and OMS   &  \\\hline
 OMS then OMS  & Mereology \\\hline
 OMS then \%ccons OMS  &  \\\hline
 OMS then \%ccons \%( IRI )\% OMS  &  \\\hline
 OMS then \%mcons OMS  &  \\\hline
+OMS then \%notccons OMS  &  \\\hline
+OMS then \%notmcons OMS  &  \\\hline
 OMS then \%mono OMS  &  \\\hline
 OMS then \%wdef OMS  &  \\\hline
 OMS then \%def OMS  &  \\\hline
@@ -7683,10 +7736,40 @@ OMS then \%implied OMS  &  BlocksWithCircumscription \\\hline
 logic IRI : OMS  &  \\\hline
 language IRI : OMS  &  \\\hline
 serialization IRI : OMS  &  \\\hline
-OMS bridge Translation OMS  & Publications \\\hline
 combine NetworkElements  & Alignments, Publications \\\hline
 combine NetworkElements excluding IRIs  &  \\\hline
 \end{tabular}
+
+\sclause{Simple Examples in Propositional Logic}
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists},escapechar=@,mathescape]
+%prefix( :      <http://www.example.org/prop#>
+         log:   <http://www.omg.org/spec/DOL/logics/> )%     
+
+		 		%% descriptions of logics ...
+
+%% non-standard serialization built into Hets: 
+logic log:Propositional syntax ser:Prop/Hets       
+
+library PropositionalExamples
+
+oms Consistent = %consistent
+  props A, B
+  . A => B
+end
+
+oms Inconsistent = %inconsistent
+  props A
+  . A /\ not A
+end
+
+oms SingleModel = %def
+  props A, B
+  . A /\ not B
+end
+
+entailment Ent = SingleModel entails { . not ( A=>B ) }
+end
+
 
 \sclause{Mereology: Distributed and Heterogeneous Ontologies}
 \label{dist-het-onto}
@@ -7705,7 +7788,7 @@ library Mereology
 logic log:Propositional syntax ser:Prop/Hets       
 
 %% basic taxonomic information about mereology reused from DOLCE:
-ontology Taxonomy = %mcons      
+ontology Taxonomy = %conssistent      
   props PT, T, S, AR, PD
   . S $\vee$ T $\vee$ AR $\vee$ PD $\longrightarrow$ PT                                                    %% PT is the top concept
   . S $\wedge$  T  $\longrightarrow$ $\bot$                  %% PD, S, T, AR are pairwise disjoint
@@ -7841,7 +7924,7 @@ end
 
 \ssclause{Alignments}
 \index{alignment}
-\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed},escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
 %prefix( :     <http://www.example.org/alignment#>
          owl:   <http://www.w3.org/2002/07/owl#>
          log:   <http://www.omg.org/spec/DOL/logics/> %% descriptions of logics ...
@@ -7897,7 +7980,7 @@ end
 
 \sclause{Distributed Description Logics}
 
-\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed},escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
 %prefix( :     <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
          log:   <http://www.omg.org/spec/DOL/logics/> %% descriptions of logics ...
@@ -7930,9 +8013,10 @@ combine
   2 : Publications2 with translation OWL2MS-OWL
   %% implicitly: Article $\mapsto$ 1:Article @\ldots@
   %%             Article $\mapsto$ 2:Article @\ldots@  
-bridge with translation MS-OWL2DDL
-  %% implicitly added my translation MS-OWL2DDL: 
+  with translation MS-OWL2DDL
+  %% implicitly added by translation MS-OWL2DDL: 
   %% binary relation providing the bridge
+then
   1:Publication $\stackrel{\sqsubseteq}{\longrightarrow}$ 2:Publication
   1:PhdThesis $\stackrel{\sqsubseteq}{\longrightarrow}$ 2:Thesis
   1:InBook $\stackrel{\sqsubseteq}{\longrightarrow}$ 2:BookArticle
@@ -7942,9 +8026,7 @@ end
 
 
 ontology Publications_Extended =
-Publications
-then
-bridge with translation DDL2-ECO
+Publications with translation DDL2-ECO
   %% turns implicit domain-relation into default relation 'D'
   %% add E-connection style bridge rules on top
 end
@@ -7960,7 +8042,8 @@ combine
   2 : { ObjectProperty: Buyer
        ObjectProperty: Good
        ObjectProperty: BoughtBy }
-bridge with translation OWL2DDLwithRoles
+  with translation OWL2DDLwithRoles
+then
   1:PurchaseOrder -into-> 2:BoughtBy
 %% means in FOL: 
 %% forall x 1PurchaseOrder(x) -> forall yz CR12(x,y,z) -> 2BoughtBy(y,z)
@@ -7971,7 +8054,7 @@ end
 
 \sclause{Ontology modules}
 
-\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed,extract},escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,extract},escapechar=@,mathescape]
 library GalenModule
 logic OWL
 ontology myGalen = 
@@ -7986,7 +8069,7 @@ end
 \sclause{Algebra}
 \ednote{use ``spec'' here???}
 
-\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed,equivalence},escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,equivalence},escapechar=@,mathescape]
 %prefix( :     <http://www.example.org/alignment#>
          owl:   <http://www.w3.org/2002/07/owl#>
          log:   <http://www.omg.org/spec/DOL/logics/> %% descriptions of logics ...
@@ -8133,7 +8216,7 @@ We can now state the fact that the state machine of the
 \uml{atm}, shown in Fig.~\ref{fig:state-machine}, is a refinement of
 the protocol state machine in Fig.~\ref{fig:psm} as follows in DOL:
 
-\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,bridge,distributed,refinement},escapechar=@,mathescape]
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,refinement},escapechar=@,mathescape]
 %prefix( :     <http://www.example.org/uml#>
          uml:   <http://www.uml.org/spec/UML/>
 %% descriptions of logics ...		 
